# sbems_frontend

./: .gitignore  LICENSE  README.md  cli.py  cli.spec  dummy.env  pyproject.toml
src/sbems_frontend/: app.py
src/sbems_frontend/templates/: filelist.html  userlist.j2  userpage.j2
src/sbems_frontend/templates/layout/: base.j2
uploads/: names.csv  report.txt
