[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sbems_frontend"
version = "0.0.1"
authors = [{ name = "Luigi Verolla", email = "luverolla@gmx.it" }]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/luverolla/sbems-frontend"
"Bug Tracker" = "https://github.com/luverolla/sbems-frontend/issues"
